app/styles/home.css
/* ... */
.time-scale {
  background-color: transparent;
  border: 1px solid var(--color-primary-20);
  color: var(--color-primary-20);
}

.curr-date {
  background-color: transparent;
  border: 1px solid lightgray;
  color: grey;
}

.pm-mode.team {
  border: 1px solid lightgray;
  color: grey;
}

.pm-mode.members {
  border: 1px solid lightgray;
  background-color: var(--color-primary-30);
  color: white;
}

#timeline {
  width: 60%;
}

#members-timeline {
  width: 100%;
}

/* QUESTIONS */

/* scale */
.scale-container {
  padding: 20px;
  margin: 10px;
}

.MuiSlider-root {
  border-radius: 12px;
  box-sizing: content-box;
  display: inline-block;
  position: relative;
  cursor: pointer;
  touch-action: none;
  color: var(--color-primary-20);
  -webkit-tap-highlight-color: transparent;
  height: 4px;
  padding: 13px 0;
  margin-bottom: 20px;
  width: 60%;
}

.MuiSlider-rail {
  display: block;
  position: absolute;
  border-radius: inherit;
  background-color: currentColor;
  opacity: 0.38;
  width: 100%;
  height: inherit;
  top: 50%;
  transform: translateY(-50%);
}

.MuiSlider-thumb {
  position: absolute;
  width: 20px;
  height: 20px;
  box-sizing: border-box;
  border-radius: 50%;
  outline: 0;
  background-color: currentColor;
  display: flex;
  justify-content: center;
  transition: box-shadow 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
    left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
    bottom 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  top: 50%;
  transform: translate(-50%, -50%);
}

.MuiSlider-markLabel {
  font-family: Mulish, Roboto, Helvetica, Arial, sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
  color: rgba(0, 0, 0, 0.87);
  position: absolute;
  white-space: nowrap;
  top: 30px;
  transform: translateX(-50%);
}

/* ranking */
.rank-card {
  background-color: #d4d4df8c;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  position: relative;
  margin: 20px auto;
  padding: 1px;
  width: 20%;
  border-radius: 10px;
  transition: 0.3s;
}

.favorite-icon {
  width: 1.5rem;
  position: absolute;
  right: 8%;
}

.rank-card:hover {
  cursor: pointer;
  background-color: rgba(212, 212, 223, 0.45);
  transition: 0.3s;
}

.rank-box {
  background-color: #22506c10;
  padding: 15px;
  border-radius: 10px;
}

/* text */
.text-q {
  width: 75%;
  background-color: rgba(255, 254, 254, 0.5);
  padding: 10px;
  border: none;
  border-radius: 10px;
  font-family: Mulish, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
    'Helvetica Neue', sans-serif;
  box-shadow: 0 0 10px 5px rgba(245, 245, 245, 0.8);
}

/* progress */
.progress-container {
  background-color: gainsboro;
  border-radius: 10px;
  width: 100%;
}

#progress {
  padding: 5px;
  background-color: var(--color-primary-30);
  border-radius: 10px;
  width: 0%;
  transition: width 0.7s;
}

/* dropdown - team */
.full-skills {
  margin: 10px;
}

.filtered-skill {
  display: inline-block;
  list-style: none;
  padding: 8px;
  margin: 8px;
  background-color: var(--color-secondary-10);
  color: white;
  font-size: 0.75rem;
  border-radius: 5px;
  cursor: pointer;
  transition: 0.3s;
}

.filtered-skill:hover {
  background-color: var(--color-primary-20);
  transition: 0.3s;
}

/* TEAMS - new hire */
.team-box {
  text-align: left;
  justify-content: center;
  background-color: var(--color-primary-40);
  border-radius: 10px;
  transition: 0.3s;
  box-shadow: 0 0 10px 5px rgba(245, 245, 245, 0.8);
  padding: 1rem;
  margin-top: 2rem;
}

.team-box.team-list {
  margin: 15px;
}

.team-box.task-list {
  margin: 20px;
}

.team-box.task-list.proj {
  background-color: var(--color-primary-20);
  color: white;
  margin: 10px;
}

.team-box.skills {
  text-align: center;
  margin: 0 auto;
  width: 80%;
}

.teams-container {
  width: 65%;
}

.newhires-list-container {
  display: flex;
  justify-content: space-between;
}

.newhires-list {
  flex: 1;
}

.newhires-list.unmatched {
  border-right: 1px solid gray;
  padding-right: 1rem;
}

.newhires-list.matched {
  padding-left: 1rem;
}

.newhires-list h4 {
  margin-top: 0;
  margin-left: 1rem;
  font-size: 1.3rem;
}

.no-matched-hires {
  font-size: 1.3rem;
  color: gray;
  text-align: center;
  margin-top: 50%;
}

.teams-list img {
  display: block;
  width: 6rem;
  height: 6rem;
  margin-right: 1rem;
  margin-top: 1rem;
  object-fit: cover;
}

.meets-container {
  width: 35%;
}

.team-box:hover,
.task-box:hover {
  background-color: #22506c13;
  transition: 0.3s;
}

.team-text {
  margin: 15px;
  padding: 5px;
}

.task-desc-toggle {
  cursor: pointer;
  float: right;
}

/* BUTTONS */

/* skill scores in team prefs */
.profile-skill-score {
  display: inline-block;
  background-color: var(--color-secondary-10);
  border-radius: 10px;
  padding: 10px;
  color: white;
  text-align: center;
}

.profile-skill-name {
  display: inline-block;
  padding: 10px;
}

.skill-search {
  font-family: Mulish, Roboto;
  font-weight: bold;
  font-size: 14px;
  color: #6e757a;
  width: 25%;
  margin: 10px;
  padding: 10px;
  border-radius: 10px;
  border-color: #05467c;
  border-width: thin;
  margin-bottom: 15px;
}

/* team description edit */
.edit.active {
  background-color: var(--color-secondary-10);
}

/* previous and next buttons */
.cta {
  margin-top: 2rem;
}

.cta a,
.cta button,
.form-actions button {
  text-decoration: none;
  background-color: var(--color-primary-20);
  color: white;
  margin: 1rem;
  border: none;
  border-radius: 4px;
  transition: 0.3s;
  font-family: Mulish, Roboto;
  font-size: 1.5rem;
  padding: 0.5rem 2rem;
}

.cta a:hover,
.scta a:hover,
.cta button:hover,
.form-actions button:hover {
  background-color: var(--color-secondary-10);
  cursor: pointer;
  transition: 0.3s;
}

.cta .match {
  font-size: 1.3rem;
}

.cta .confirm {
  background-color: var(--color-primary-10);
}
/* ... */

